--- a/sources/index.html
+++ b/sources/index.html
@@ -177,24 +177,34 @@
                         <br/>
 
                         <p>
-                            Our building is in the heart of downtown, one block from both the Parc 55 Hotel and the Hilton, and three blocks from Union Square.
+                            Our building is in the heart of downtown, one block from both the Parc 55 Hotel and the
+                            Hilton, and three blocks from Union Square.
                         </p>
                         <h4>Parking</h4>
+
                         <p>
                             There are many nearby parking locations, and some are open 24 hours. <br/>
                             The lot a few steps down the street directly to the east will stay open for events. <br/>
-                            Street parking is available as well, however as this is San Francisco, a reminder....  leave nothing in your car. No matter where you park in SF, if you leave anything in your car, someone will want it!
-                            A map of parking lots can be found on <a href="http://www.yelp.com/search?find_desc=parking+lots&find_loc=181+Eddy+St%2C+san+Francisco%2C+ca+94102&ns=1&ls=1a9bfbaedb66b43d">here on Yelp</a>.
+                            Street parking is available as well, however as this is San Francisco, a reminder.... leave
+                            nothing in your car. No matter where you park in SF, if you leave anything in your car,
+                            someone will want it!
+                            A map of parking lots can be found on <a
+                                href="http://www.yelp.com/search?find_desc=parking+lots&find_loc=181+Eddy+St%2C+san+Francisco%2C+ca+94102&ns=1&ls=1a9bfbaedb66b43d">here
+                            on Yelp</a>.
                         </p>
                         <h4>Public Transit</h4>
+
                         <p>
                             The Powell street BART station is roughly two blocks East on Market street <br/>
-                            The Muni F line is roughly two blocks away on Market street  There are a large number of buses that stop at the Market and 5th street stations.<br/>
+                            The Muni F line is roughly two blocks away on Market street There are a large number of
+                            buses that stop at the Market and 5th street stations.<br/>
                             The 31 Bus line runs directly down Eddy street. <br/>
                         </p>
                         <h4>Accessibility:</h4>
+
                         <p>
-                            Unfortunately, the SFCitadel is not wheelchair accessible as we are located on the second floor with no elevator or lift.
+                            Unfortunately, the SFCitadel is not wheelchair accessible as we are located on the second
+                            floor with no elevator or lift.
                         </p>
                     </div>
                     <div class="col-sm-6 col-xs-12">
@@ -265,93 +275,99 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-xs-12 about-section">
-            <h1>Calendar</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 about-section">
+                <h1>Calendar</h1>
 
-            <p>
-                Here is the calendar
-            </p>
+                <p>
+                    Here is the calendar
+                </p>
+            </div>
         </div>
     </div>
 
     <!-- MAP MAP MAP MAP -->
 
     <!-- FOOTER FOOTER FOOTER -->
-    <div class="row" id="footer">
-        <div class="col-xs-6">
-            <h1>Associations</h1>
+    <div class="container-fluid">
+        <div class="row" id="footer">
+            <div class="col-xs-6">
+                <h1>Associations</h1>
 
-            <p>
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-                <img src="http://placehold.it/120x60">
-            </p>
-        </div>
-        <div class="col-xs-6">
-            <h1>Subscribe to updates</h1>
+                <p>
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                </p>
+            </div>
+            <div class="col-xs-6">
+                <h1>Subscribe to updates</h1>
 
-            <p>
-                <!-- Begin MailChimp Signup Form -->
-                <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-                <style type="text/css">
-                    #mc_embed_signup {
-                        background: #fff;
-                        clear: left;
-                        font: 14px Helvetica, Arial, sans-serif;
-                    }
+                <p>
+                    <!-- Begin MailChimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet"
+                          type="text/css">
+                    <style type="text/css">
+                        #mc_embed_signup {
+                            background: #fff;
+                            clear: left;
+                            font: 14px Helvetica, Arial, sans-serif;
+                        }
 
-                    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
-                    #mc_embed_signup .mc-field-group {
-                        padding: 5px 10px;
-                    !important
-                    }
+                        #mc_embed_signup .mc-field-group {
+                            padding: 5px 10px;
+                        !important
+                        }
 
-                    #mc_embed_signup .mc-field-group.input-group label {
-                        color: black;
-                    }
+                        #mc_embed_signup .mc-field-group.input-group label {
+                            color: black;
+                        }
 
-                </style>
-            <div id="mc_embed_signup">
-                <form action="//sfcitadel.us3.list-manage.com/subscribe/post?u=513db833b41b27984e48f9134&amp;id=a1f2d374f4"
-                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                      target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                        <!-- <h2>Subscribe to our mailing list</h2> -->
-                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                        <div class="mc-field-group">
-                            <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-                            </label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-FNAME">First Name <span class="asterisk">*</span>
-                            </label>
-                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-LNAME">Last Name <span class="asterisk">*</span>
-                            </label>
-                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-FETLIFE">Fetlife Alias (Optional) </label>
-                            <input type="text" value="" name="FETLIFE" class="" id="mce-FETLIFE">
-                        </div>
-                        <div class="mc-field-group size1of2">
-                            <label for="mce-BDAY-month">Date of Birth (We're Adult, must be 18+) <span class="asterisk">*</span>
-                            </label>
+                    </style>
+                <div id="mc_embed_signup">
+                    <form action="//sfcitadel.us3.list-manage.com/subscribe/post?u=513db833b41b27984e48f9134&amp;id=a1f2d374f4"
+                          method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                          class="validate"
+                          target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <!-- <h2>Subscribe to our mailing list</h2> -->
+                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                            <div class="mc-field-group">
+                                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                                </label>
+                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-FNAME">First Name <span class="asterisk">*</span>
+                                </label>
+                                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name <span class="asterisk">*</span>
+                                </label>
+                                <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-FETLIFE">Fetlife Alias (Optional) </label>
+                                <input type="text" value="" name="FETLIFE" class="" id="mce-FETLIFE">
+                            </div>
+                            <div class="mc-field-group size1of2">
+                                <label for="mce-BDAY-month">Date of Birth (We're Adult, must be 18+) <span
+                                        class="asterisk">*</span>
+                                </label>
 
-                            <div class="datefield">
+                                <div class="datefield">
                                 <span class="subfield monthfield"><input class="datepart required" type="text"
                                                                          pattern="[0-9]*" value="" placeholder="MM"
                                                                          size="2" maxlength="2" name="BDAY[month]"
@@ -364,51 +380,53 @@
                                                                         pattern="[0-9]*" value="" placeholder="YYYY"
                                                                         size="4" maxlength="4" name="BDAY[year]"
                                                                         id="mce-BDAY-year"></span>
-                                <span class="small-meta nowrap">( mm / dd / yyyy )</span>
+                                    <span class="small-meta nowrap">( mm / dd / yyyy )</span>
+                                </div>
                             </div>
+                            <div class="mc-field-group input-group">
+                                <strong>Interested in </strong>
+                                <ul>
+                                    <li><input type="checkbox" value="1" name="group[12845][1]"
+                                               id="mce-group[12845]-12845-0"><label for="mce-group[12845]-12845-0">Volunteering
+                                        Opportunities</label></li>
+                                    <li><input type="checkbox" value="2" name="group[12845][2]"
+                                               id="mce-group[12845]-12845-1"><label for="mce-group[12845]-12845-1">Occasional
+                                        News and items of interest to the BDSM community</label></li>
+                                </ul>
+                            </div>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;"><input type="text"
+                                                                                   name="b_513db833b41b27984e48f9134_a1f2d374f4"
+                                                                                   tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+                                                      id="mc-embedded-subscribe" class="button art-button"></div>
                         </div>
-                        <div class="mc-field-group input-group">
-                            <strong>Interested in </strong>
-                            <ul>
-                                <li><input type="checkbox" value="1" name="group[12845][1]"
-                                           id="mce-group[12845]-12845-0"><label for="mce-group[12845]-12845-0">Volunteering
-                                    Opportunities</label></li>
-                                <li><input type="checkbox" value="2" name="group[12845][2]"
-                                           id="mce-group[12845]-12845-1"><label for="mce-group[12845]-12845-1">Occasional
-                                    News and items of interest to the BDSM community</label></li>
-                            </ul>
-                        </div>
-                        <div id="mce-responses" class="clear">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;"><input type="text"
-                                                                               name="b_513db833b41b27984e48f9134_a1f2d374f4"
-                                                                               tabindex="-1" value=""></div>
-                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-                                                  id="mc-embedded-subscribe" class="button art-button"></div>
-                    </div>
-                </form>
+                    </form>
+                </div>
+                <script type='text/javascript'
+                        src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                <script type='text/javascript'>(function ($) {
+                    window.fnames = new Array();
+                    window.ftypes = new Array();
+                    fnames[0] = 'EMAIL';
+                    ftypes[0] = 'email';
+                    fnames[1] = 'FNAME';
+                    ftypes[1] = 'text';
+                    fnames[2] = 'LNAME';
+                    ftypes[2] = 'text';
+                    fnames[3] = 'FETLIFE';
+                    ftypes[3] = 'text';
+                    fnames[5] = 'BDAY';
+                    ftypes[5] = 'date';
+                }(jQuery));
+                var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
+                </p>
             </div>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-            <script type='text/javascript'>(function ($) {
-                window.fnames = new Array();
-                window.ftypes = new Array();
-                fnames[0] = 'EMAIL';
-                ftypes[0] = 'email';
-                fnames[1] = 'FNAME';
-                ftypes[1] = 'text';
-                fnames[2] = 'LNAME';
-                ftypes[2] = 'text';
-                fnames[3] = 'FETLIFE';
-                ftypes[3] = 'text';
-                fnames[5] = 'BDAY';
-                ftypes[5] = 'date';
-            }(jQuery));
-            var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup-->
-            </p>
         </div>
     </div>
     <!-- END FOOTER -->
